tests/ui/errors/snapshots/parse_rust_mut_ref.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:11]
 3 │   let mut x = 5;
 4 │   let y = &mut x;
   ·           ──┬─
   ·             ╰── invalid syntax
 5 │ }
   ╰────
  help: Lisette has no mutable references. Use `&x` instead · code: [parse.syntax_error]
